docs/toolbox-technical-manuals/risk-calculations-suite/typical-event-tree-database/v1.3/00-version-history.mdx
import NavContainer from "@site/src/components/NavContainer";
import TableVersionHistory from "@site/src/components/TableVersionHistory";
import Link from "@docusaurus/Link";

<NavContainer
  link="/toolboxes/risk-calculations-suite"
  linkTitle="Risk Calculations Suite"
  document="toolbox-technical-manuals/risk-calculations-suite/typical-event-tree-database"
></NavContainer>

# Version History

<TableVersionHistory
  versions={["1.0", "1.1", "1.2", "1.3"]}
  dates={["August 2021", "February 2023", "April 2023", "January 2024"]}
  descriptions={[
    ["Initial release."],
    ["Template update. No changes to event trees."],
    [
      "Updated Concrete Lined Spillway Erosion (Slab Jacking) typical event tree.",
    ],
    [
      "Embankment Slope Instabilty: Revised Node 1 description from 'Rainfall infiltration into crack, rapid drawdown, surcharge loading, etc. occurs?' to 'Decrease in shear strength or increase in load on the slope (i.e., increase in shear stress) occurs?'",
      "All Concentrated Leak Erosion PFMs: Revised description of Progression: Crack Stability nodes from 'Continuous stable roof forms over the crack or stable sidewalls are maintained along the crack?' to 'Continuous stable roof forms over the crack or stable sidewalls are maintained along the crack and do not swell shut?'",
      "Concentrated Leak Erosion (Homogeneous Embankment): Revised Node 1 description from “A continuous transverse crack exists…” to “A continuous transverse crack (or high-permeability zone) exists…”.",
      "Concentrated Leak Erosion (Zoned Embankment with Segregated or Internally Unstable Filter): Revised Node 1 and Node 2 descriptions from “A continuous transverse crack exists…” to “A continuous transverse crack (or high-permeability zone) exists…”.",
      "Concentrated Leak Erosion (Homogeneous Embankment with Segregated or Internally Unstable Filter): Revised Node 1 description from “A continuous transverse crack exists…” to “A continuous transverse crack (or high-permeability zone) exists…”.",
      "Embankment Overtopping Erosion: Added the following note to the event tree: “Efforts to raise the dam or levee crest elevation prior to overtopping (Node 1) will affect the overtopping AEP and maximum water surface elevation, which could increase the differential head available to drive prior to overtopping PFMs. Raising the crest elevation could also result in the transfer of risk from one population to another (e.g., raising the levee crest in one location can result in premature non-breach overtopping flows in another location). Each of these effects should be evaluated in the risk analysis.",
      "Embankment Overtopping Erosion: Node 1: Revised description from “Intervention to prevent overtopping is unsuccessful?” to “Efforts to prevent overtopping or armor the slope are unsuccessful?”.",
      "Embankment Overtopping Erosion: Node 3: Revised title from “Headcut Initiation” to “Initiation” and description from “Headcut develops from cascading overfalls from sheet & rill erosion, at a knickpoint, or at a protrusion into the flow?” to “Surface erosion initiates, or headcut develops at knick-point or protrusion into the flow?”.",
      "Embankment Overtopping Erosion: Node 4: Revised title from “Headcut Continuation” to “Continuation” and description from “Embedded non-erodible feature fails to arrest headcut advance?” to “No embedded non-erodible feature exists to arrest erosion or headcut migration?”",
      "Embankment Overtopping Erosion: Node 5: Revised description from “Headcut advances through the crest and uncontrolled release of impounded water occurs?” to “Erosion or headcut advances through the crest and uncontrolled release of impounded water occurs?”.",
    ],
  ]}
  modifiedBy={["-", "Adam Gohs", "Adam Gohs", "Adam Gohs"]}
  reviewedBy={["Tim O'Leary", "Tim O'Leary", "Tim O'Leary", "Tim O'Leary"]}
  approvedBy={["Nathan Snorteland", "-", "-", "-"]}
/>
