docs/toolbox-technical-manuals/risk-calculations-suite/typical-event-tree-database/v1.5/00-version-history.mdx
import NavContainer from "@site/src/components/NavContainer";
import TableVersionHistory from "@site/src/components/TableVersionHistory";
import Link from "@docusaurus/Link";

<NavContainer
  link="/toolboxes/risk-calculations-suite"
  linkTitle="Risk Calculations Suite"
  document="toolbox-technical-manuals/risk-calculations-suite/typical-event-tree-database"
></NavContainer>

# Version History

<TableVersionHistory
  versions={["1.0", "1.1", "1.2", "1.3", "1.4", "1.5"]}
  dates={[
    "August 2021",
    "February 2023",
    "April 2023",
    "January 2024",
    "June 2024",
    "March 2025",
  ]}
  descriptions={[
    ["Initial release."],
    ["Template update. No changes to event trees."],
    [
      "Updated Concrete Lined Spillway Erosion (Slab Jacking) typical event tree.",
    ],
    [
      "Embankment Slope Instabilty: Revised Node 1 description from 'Rainfall infiltration into crack, rapid drawdown, surcharge loading, etc. occurs?' to 'Decrease in shear strength or increase in load on the slope (i.e., increase in shear stress) occurs?'",
      "All Concentrated Leak Erosion PFMs: Revised description of Progression: Crack Stability nodes from 'Continuous stable roof forms over the crack or stable sidewalls are maintained along the crack?' to 'Continuous stable roof forms over the crack or stable sidewalls are maintained along the crack and do not swell shut?'",
      "Concentrated Leak Erosion (Homogeneous Embankment): Revised Node 1 description from “A continuous transverse crack exists…” to “A continuous transverse crack (or high-permeability zone) exists…”.",
      "Concentrated Leak Erosion (Zoned Embankment with Segregated or Internally Unstable Filter): Revised Node 1 and Node 2 descriptions from “A continuous transverse crack exists…” to “A continuous transverse crack (or high-permeability zone) exists…”.",
      "Concentrated Leak Erosion (Homogeneous Embankment with Segregated or Internally Unstable Filter): Revised Node 1 description from “A continuous transverse crack exists…” to “A continuous transverse crack (or high-permeability zone) exists…”.",
      "Embankment Overtopping Erosion: Added the following note to the event tree: “Efforts to raise the dam or levee crest elevation prior to overtopping (Node 1) will affect the overtopping AEP and maximum water surface elevation, which could increase the differential head available to drive prior to overtopping PFMs. Raising the crest elevation could also result in the transfer of risk from one population to another (e.g., raising the levee crest in one location can result in premature non-breach overtopping flows in another location). Each of these effects should be evaluated in the risk analysis.",
      "Embankment Overtopping Erosion: Node 1: Revised description from “Intervention to prevent overtopping is unsuccessful?” to “Efforts to prevent overtopping or armor the slope are unsuccessful?”.",
      "Embankment Overtopping Erosion: Node 3: Revised title from “Headcut Initiation” to “Initiation” and description from “Headcut develops from cascading overfalls from sheet & rill erosion, at a knickpoint, or at a protrusion into the flow?” to “Surface erosion initiates, or headcut develops at knick-point or protrusion into the flow?”.",
      "Embankment Overtopping Erosion: Node 4: Revised title from “Headcut Continuation” to “Continuation” and description from “Embedded non-erodible feature fails to arrest headcut advance?” to “No embedded non-erodible feature exists to arrest erosion or headcut migration?”",
      "Embankment Overtopping Erosion: Node 5: Revised description from “Headcut advances through the crest and uncontrolled release of impounded water occurs?” to “Erosion or headcut advances through the crest and uncontrolled release of impounded water occurs?”.",
    ],
    [
      "Embankment Overtopping Erosion: Node 1: Revised description from “Efforts to prevent overtopping or armor the slope are unsuccessful?” to “Efforts to armor the embankment against erosion are unsuccessful?”.",
      "Embankment Overtopping Erosion: Revised the note associated with the event tree to state “Do not consider temporary crest raises.”",
    ],
    [
      "Backward Erosion Piping: Revised Node 5 description from “Sufficient flow exists to advance the pipe to the impounded water?” to “Sufficient flow exists to advance the pipe toward the impounded water?”.",
      "Concentrated Leak Erosion (Along Embedded Structure): Revised Node 1 description from “A transverse crack exists along the conduit due to low stress zone or poor compaction?” to “A transverse crack exists along the embedded structure due to low stress zone or poor compaction?”",
      "Concentrated Leak Erosion (At Embankment/Embedded Structure Contact): Revised subtitle of typical event tree from “At embankment/foundation contact” to “At embankment/embedded structure contact”.",
      "Concentrated Leak Erosion (At Embankment/Embedded Structure Contact): Revised Node 1 description from “A transverse crack exists at the foundation contact due to ground shaking” to “A transverse crack exists in the embankment adjacent to an embedded structure due to differential movement?”",
      "Concentrated Leak Erosion (Fault Rupture) – added new typical event tree.",
      "Concentrated Leak Erosion (In Embankment): Revised Node 1 description from “A transverse crack exists in the embankment due to ground shaking?” to “A transverse crack exists in the embankment due to differential settlement?”",
      "Concrete Dam Monolith Instability – added new typical event tree.",
      "Concrete Dam Overtopping and Monolith Instability: Moved “Unsuccessful Intervention” node to the front of the event tree. Changed “Unsuccessful Intervention” node description from “Detection and intervention are unsuccessful?” to “Intervention to prevent overtopping is unsuccessful?”.",
      "Embankment Overtopping Erosion: Revised Node 1 description from “Efforts to armor the embankment against erosion are unsuccessful?” to “Efforts to raise the crest or armor the embankment against erosion are unsuccessful?”.",
      "Embankment Overtopping Erosion: Revised note from “Do not consider temporary crest raises.” to “Consider the impact of increased hydraulic head on other PFMs.”",
      "Embankment Overtopping (Retrogressive Instability) – added new typical event tree.",
      "Embankment Slope Instability – added new typical event tree.",
      "Seismic Embankment Deformation: Removed Node 3 “Unsuccessful Intervention” from the typical event tree.",
      "Seismic Embankment Deformation: Revised title from “Seismic Embankment Deformation” to “Embankment Overtopping (Instantaneous)” and redrew typical event tree to account for flow slide due to liquefaction, Newmark instability given liquefaction not triggered by earthquake, and Newmark instability when liquefiable layer does not exist.",
    ],
  ]}
  modifiedBy={[
    "-",
    "Adam Gohs",
    "Adam Gohs",
    "Adam Gohs",
    "Adam Gohs",
    "Adam Gohs",
  ]}
  reviewedBy={[
    "Tim O'Leary",
    "Tim O'Leary",
    "Tim O'Leary",
    "Tim O'Leary",
    "Tim O'Leary",
    "Tim O'Leary",
  ]}
  approvedBy={["Nathan Snorteland", "-", "-", "-", "-", "-"]}
/>
